--- a/src/app/mainsec/mainsection/mainsection.component.css
+++ b/src/app/mainsec/mainsection/mainsection.component.css
@@ -19,6 +19,11 @@
   -moz-box-shadow: 1px 6px 22px 9px rgba(0,0,0,0.35);
 }
 
+.card-title {
+  color: #179d14;
+}
+
+
 .row {
   display: flex;
   justify-content: space-around;
