--- a/src/app/sitefooter/sitefooter.component.html
+++ b/src/app/sitefooter/sitefooter.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div class="col-sm-6">
+    <div class="col-8 col-sm-6">
       Contacto
       <div class="row">
         <div class="mb-3">
