--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Carrois Gothic', sans-serif;
+}
+
 .saltologo {
   width: 100px;
   height: 100px;
@@ -11,7 +15,7 @@
 }
 
 .fa {
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin: 0;
 }
 .icon-link {
@@ -19,4 +23,20 @@
 }
 .navbar>.container {
   justify-content: space-evenly;
+}
+
+.animated-icon {
+  animation: pulse 2s infinite ease-in-out;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
