--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,25 +10,29 @@
 <a href="https://www.instagram.com/saltoinstalaciones/" class="icon-link">
   <i class="fa fa-brands fa-instagram" style="color: #a64e9b;"></i>
 </a>
-<a href="#" class="icon-link" target="_blank">
+<a href="https://www.facebook.com/salto.salto.9678?mibextid=ZbWKwL" class="icon-link" target="_blank">
   <i class="fa fa-brands fa-facebook-f" style="color: #537fca;"></i>
 </a>
 
-<a href="#" class="icon-link animated-icon" target="_blank">
+<a href="tel://+59898414718" class="icon-link animated-icon" target="_blank">
     <fa-icon [icon]="['fas','phone-volume']"></fa-icon>
 </a>
-
-<a href="https://wa.me/+59898414718?text=Hola,%20estoy%20interesado%20en%20un%20presupuesto%20para%20.." class="icon-link" target="_blank">
-  <i class="fa fa-brands fa-whatsapp fa-beat fa-sm" style="color: #3fe45b;"></i>
-</a>
-
   </div>
   </nav>
 
 
  </div>
 
+  <a href="https://wa.me/+59898414718?text=Hola,%20estoy%20interesado%20en%20un%20presupuesto%20para%20.." class="icon-link" id="cont-whatsapp" target="_blank">
+    <span>Chatea con nosotros</span>
+    <i class="fa fa-brands fa-whatsapp fa-sm" id="whatsapp">
+
+    </i>
+  </a>
+
+
 <div class="container">
+
   <div class="text-center">
     <app-navegat></app-navegat>
 
