--- a/src/app/houseing/houseing.component.html
+++ b/src/app/houseing/houseing.component.html
@@ -1,1 +1,27 @@
-<p>houseing works!</p>
+<div class="container">
+
+  <div class="col-md-4">
+   <img src="assets/imgs/work-galler/house/house-tablero.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/prepint.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/prepint2.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/prepint3.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/housef.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/housef1.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/housef2.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/housef3.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/bath1.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/bath2.jpg" alt="" class="img-fluid">
+
+    <img src="assets/imgs/work-galler/house/bath3.jpg" alt="" class="img-fluid">
+   </div>
+
+</div>
