--- a/src/app/industry/industry.component.html
+++ b/src/app/industry/industry.component.html
@@ -1,1 +1,30 @@
-<p>industry works!</p>
+<div class="col-md-4">
+  <img src="assets/imgs/work-galler/industry/sillaeleva.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/industry/sillaele1.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/industry/sillaele2.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/industry/sillaele3.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/industry/sillaele4.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/industry/sillaele5.jpg" alt="" class="img-fluid">
+</div>
+<div class="col-md-4">
+  <img src="assets/imgs/work/galler/industry/mant.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work/galler/industry/mant1.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work/galler/industry/obras.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work/galler/industry/obras1.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work/galler/industry/obras2.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work/galler/industry/obras3.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work/galler/industry/obras4.jpg" alt="" class="img-fluid">
+
+</div>
+
