--- a/src/app/installations/installations.component.html
+++ b/src/app/installations/installations.component.html
@@ -1,1 +1,8 @@
-<p>installations works!</p>
+<div class="col-md-4">
+  <img src="assets/imgs/work-galler/cctv/cctv.jpg" alt="" class="img-fluid">
+  <img src="assets/imgs/work-galler/cctv/cctv1.jpg" alt="" class="img-fluid">
+  <img src="assets/imgs/work-galler/cctv/ccinstall.jpg" alt="" class="img-fluid">
+  <img src="assets/imgs/work-galler/cctv/ccinstall1.jpg" alt="" class="img-fluid">
+  <img src="assets/imgs/work-galler/cctv/ccinstall2.jpg" alt="" class="img-fluid">
+
+</div>
