--- a/src/app/navegat/navegat.component.html
+++ b/src/app/navegat/navegat.component.html
@@ -11,6 +11,8 @@
       <li><a class="dropdown-item" routerLink="/installations">Instalaciones CCTV</a></li>
       <li><hr class="dropdown-divider"></li>
       <li><a class="dropdown-item" routerLink="/panels">PANELES SOLARES</a></li>
+      <li><a class="dropdown-item" routerLink="/climate">CLIMATIZACION</a></li>
+
     </ul>
   </li>
 
