--- a/src/app/panels/panels.component.html
+++ b/src/app/panels/panels.component.html
@@ -1,1 +1,14 @@
-<p>panels works!</p>
+<div class="col-md-4">
+  <img src="assets/imgs/work-galler/panels/panelsolar.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/panels/panelsolar1.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/panels/panelsolar2.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/panels/panelen.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/panels/panelen1.jpg" alt="" class="img-fluid">
+
+  <img src="assets/imgs/work-galler/panels/panelen2.jpg" alt="" class="img-fluid">
+
+  </div>
