--- a/src/app/services-sect/services-sect.component.css
+++ b/src/app/services-sect/services-sect.component.css
@@ -8,10 +8,14 @@ a {
 }
 .card {
   padding: 0 1.1rem;
+  border: none;
 }
 .card-group {
   padding: 2rem 0;
 }
 .card-text {
   text-align: left;
+}
+.card-footer {
+  border-bottom: 1px solid #000;
 }
