--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,1 +1,54 @@
-<p>works works!</p>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+   <img src="assets/imgs/work-galler/house/bath3.jpg" alt="" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/imgs/work-galler/poolclima/poolclima2.jpg" alt="" class="img-fluid">
+
+      </div>
+    <div class="col">
+
+      <img src="assets/imgs/work-galler/poolclima/climatice.jpg" alt="" class="img-fluid">
+    </div>
+  </div>
+
+    <div class="row">
+      <div class="col">
+        <img src="assets/imgs/work-galler/house/lightout2.jpg" alt="" class="img-fluid">
+
+      </div>
+      <div class="col">
+        <img src="assets/imgs/work-galler/house/housef.jpg" alt="" class="img-fluid">
+
+      </div>
+      <div class="col">
+        <img src="assets/imgs/work-galler/house/housef2.jpg" alt="" class="img-fluid">
+
+      </div>
+      <div class="col">
+        <img src="assets/imgs/work-galler/house/housef1.jpg" alt="" class="img-fluid">
+
+      </div>
+    </div>
+
+
+  <div class="row">
+    <div class="col">
+      <img src="assets/imgs/work-galler/panels/panelsolar1.jpg" alt="" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/imgs/work-galler/panels/panelsolar2.jpg" alt="" class="img-fluid">
+    </div>
+    <div class="col">
+      <img src="assets/imgs/work-galler/panels/solarinstall1.jpg" alt="" class="img-fluid">
+    </div>
+  </div>
+  <p class="lead">
+    Los principios fundamentales de nuestra Empresa se basan en la filosofia; brindar un servicio de calidad a nuestros clientes.
+    Mas de 20 años de experiencia nos avalan, tu siguiente proyecto es con nosotros
+  </p>
+  <div class="d-grid col-6 mx-auto">
+    <button class="btn btn-outline-primary" type="button">Button</button>
+  </div>
+</div>
