--- a/src/app/services-sect/services-sect.component.html
+++ b/src/app/services-sect/services-sect.component.html
@@ -5,8 +5,9 @@
       <p class="card-text">Instalación de paneles solares. Nuestro equipo de expertos altamente capacitados se encargara de todo el proceso, desde la evaluacion de tu espacio hasta la instalacion completa, garantizando un rendimiento optimo y duradero </p>
     </div>
     <div class="card-footer">
-      <a class="icon-link" href="#"><small class="text-body-secondary">Conocer mas
-         </small><i class="fa fa-arrow-right"></i>
+      <small class="text-body-secondary">Conocer mas
+      </small>
+      <a class="icon-link" href="#"><i class="fa fa-arrow-right"></i>
         </a>
     </div>
   </div>
@@ -17,7 +18,8 @@
       <p class="card-text">Planificación, ejecución y asesoria de instalaciones eléctricas en comercio e industria. Todo cumpliendo la normativa vigente a nivel nacional.</p>
       </div>
       <div class="card-footer">
-        <a href="#"><small class="text-body-secondary">Envianos un mensaje</small>
+        <small class="text-body-secondary">Envianos un mensaje</small>
+        <a class="icon-link" href="#">
           <i class="fa fa-arrow-right"></i>
         </a>
       </div>
@@ -29,7 +31,8 @@
       <p class="card-text"> Desde instalaciones hasta reparaciones, nos aseguramos de que cada trabajo se realice con la mas alta calidad y profesionalismo.</p>
     </div>
     <div class="card-footer">
-      <a href="#"><small class="text-body-secondary">Mas informacion</small>
+      <small class="text-body-secondary">Mas informacion</small>
+      <a class="icon-link" href="#">
         <i class="fa fa-arrow-right"></i>
       </a>
     </div>
