--- a/src/app/sitefooter/sitefooter.component.html
+++ b/src/app/sitefooter/sitefooter.component.html
@@ -38,4 +38,31 @@
       </div>
     </div>
   </div>
+  <hr>
+<div class="d-flex flex-column flex-sm-row justify-content-around py-4 my-4">
+  <h6>SALTO INSTALACIONES &copy;</h6>
+  <small>Horario de atencion: Lunes a Viernes 8:00 - 18:00</small>
+    <a href="https://www.google.com/maps/place/Agraciada+3120,+50000+Salto,+Departamento+de+Salto/@-31.3875946,-57.9366521,17z/data=!3m1!4b1!4m6!3m5!1s0x95addcb9e2b822b1:0x36b736e99a48ade0!8m2!3d-31.3875946!4d-57.9340772!16s%2Fg%2F11fp3ksbrx?entry=ttu" class="link-dark"><small>Salto, Uruguay</small>
+      <i class="fa-solid fa-location-dot" style="color: #4400ff;"></i>
+    </a>
+
+  <ul class="list-unstyled d-flex justify-content-end col-md-4">
+    <li class="ms-3">
+      <a href="https://www.instagram.com/saltoinstalaciones/" class="link-dark">
+        <i class="fa fa-brands fa-instagram" style="color: #a64e9b;"></i>
+      </a>
+    </li>
+    <li class="ms-3">
+      <a href="https://www.facebook.com/salto.salto.9678?mibextid=ZbWKwL" class="link-dark" target="_blank">
+        <i class="fa fa-brands fa-facebook-f" style="color: #537fca;"></i>
+      </a>
+    </li>
+    <li class="ms-3">
+      <a href="#" class="icon-link animated-icon" target="_blank">
+        <fa-icon [icon]="['fas','phone-volume']"></fa-icon>
+    </a>
+    </li>
+  </ul>
 </div>
+</div>
+
