added carousel for s

--- a/src/app/houseing/houseing.component.html
+++ b/src/app/houseing/houseing.component.html
@@ -1,27 +1,53 @@
-<div class="container">
+<div class="container-text-center">
 
-  <div class="col-md-4">
-   <img src="assets/imgs/work-galler/house/house-tablero.jpg" alt="" class="img-fluid">
 
-    <img src="assets/imgs/work-galler/house/prepint.jpg" alt="" class="img-fluid">
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/imgs/work-galler/house/house-tablero.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/prepint.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/prepint2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/prepint3.jpg" alt="" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/housef.jpg" alt="" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/housef1.jpg" alt="" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/housef2.jpg" alt="" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/housef3.jpg" alt="" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/bath1.jpg" alt="" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/bath2.jpg" alt="" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/imgs/work-galler/house/bath3.jpg" alt="" class="d-block w-100">
 
-    <img src="assets/imgs/work-galler/house/prepint2.jpg" alt="" class="img-fluid">
-
-    <img src="assets/imgs/work-galler/house/prepint3.jpg" alt="" class="img-fluid">
-
-    <img src="assets/imgs/work-galler/house/housef.jpg" alt="" class="img-fluid">
-
-    <img src="assets/imgs/work-galler/house/housef1.jpg" alt="" class="img-fluid">
-
-    <img src="assets/imgs/work-galler/house/housef2.jpg" alt="" class="img-fluid">
-
-    <img src="assets/imgs/work-galler/house/housef3.jpg" alt="" class="img-fluid">
-
-    <img src="assets/imgs/work-galler/house/bath1.jpg" alt="" class="img-fluid">
-
-    <img src="assets/imgs/work-galler/house/bath2.jpg" alt="" class="img-fluid">
-
-    <img src="assets/imgs/work-galler/house/bath3.jpg" alt="" class="img-fluid">
-   </div>
-
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<h5 class="card-title">Mas de 20 años de experiencia</h5>
+<p class="card-text">Nuestro principal objetivo es siempre brindar un servicio eficaz a nuestros clientes</p>
+<a href="#" class="btn btn-primary">Go somewhere</a>
 </div>
