--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,14 @@
 * {
   font-family: 'Carrois Gothic', sans-serif;
+
 }
 
+nav {
+  background: #e2e8fa;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #E2E2E2, #e2e8fa);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #E2E2E2, #e2e8fa); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
 .saltologo {
   width: 120px;
   height: 120px;
@@ -18,6 +25,7 @@
   font-size: 1.5rem;
   margin: 0;
 }
+
 .icon-link {
   text-decoration: none;
 }
