--- a/src/app/heromain/heromain.component.html
+++ b/src/app/heromain/heromain.component.html
@@ -1,6 +1,7 @@
-<div class="container-fluid">
-  <div class="container">
-  <div class="card mb-3" style="max-width: 1240px;">
+<div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="card mb-3" style="max-width: 1240px;">
 
 
         <div class="row g-0">
@@ -11,7 +12,6 @@
         <div class="col-md-4">
           <div class="card-body">
             <h5 class="card-title">Paneles solares</h5>
-            <p class="card-text">La electricidad generada por los paneles solares puede ser almacenada en baterías para su uso posterior. Esto es fundamental en sistemas off-grid, ya que permite tener energía disponible durante la noche o en días nublados cuando no hay generación solar directa.</p>
 
             <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
           </div>
@@ -21,7 +21,60 @@
 
 
     </div>
+    </div>
+    <div class="carousel-item">
+      <div class="card mb-3" style="max-width: 1240px;">
 
-   </div>
+
+        <div class="row g-0">
+        <div class="col-md-6">
+        <img src="assets/imgs/work-galler/cctv/cctvmain.jpg" class="img-fluid rounded-start" alt="...">
+        </div>
+
+        <div class="col-md-4">
+          <div class="card-body">
+            <h5 class="card-title">Videovigilancia</h5>
+
+            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
+          </div>
+        </div>
+
+    </div>
+
+
+    </div>
+    </div>
+    <div class="carousel-item">
+      <div class="card mb-3" style="max-width: 1240px;">
+
+
+        <div class="row g-0">
+        <div class="col-md-6">
+        <img src="assets/imgs/work-galler/poolclima/climatice.jpg" class="img-fluid rounded-start" alt="...">
+        </div>
+
+        <div class="col-md-4">
+          <div class="card-body">
+            <h5 class="card-title">Climatizacion de piscinas</h5>
+
+            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
+          </div>
+        </div>
+
+    </div>
+
+
+    </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+
 
