--- a/src/app/industry/industry.component.html
+++ b/src/app/industry/industry.component.html
@@ -1,30 +1,52 @@
-<div class="col-md-4">
-  <img src="assets/imgs/work-galler/industry/sillaeleva.jpg" alt="" class="img-fluid">
 
-  <img src="assets/imgs/work-galler/industry/sillaele1.jpg" alt="" class="img-fluid">
 
-  <img src="assets/imgs/work-galler/industry/sillaele2.jpg" alt="" class="img-fluid">
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/imgs/work-galler/industry/sillaeleva.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/sillaele1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/sillaele2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/sillaele4.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/sillaele5.jpg" class="d-block w-100" alt="...">
+      </div>
 
-  <img src="assets/imgs/work-galler/industry/sillaele3.jpg" alt="" class="img-fluid">
-
-  <img src="assets/imgs/work-galler/industry/sillaele4.jpg" alt="" class="img-fluid">
-
-  <img src="assets/imgs/work-galler/industry/sillaele5.jpg" alt="" class="img-fluid">
-</div>
-<div class="col-md-4">
-  <img src="assets/imgs/work/galler/industry/mant.jpg" alt="" class="img-fluid">
-
-  <img src="assets/imgs/work/galler/industry/mant1.jpg" alt="" class="img-fluid">
-
-  <img src="assets/imgs/work/galler/industry/obras.jpg" alt="" class="img-fluid">
-
-  <img src="assets/imgs/work/galler/industry/obras1.jpg" alt="" class="img-fluid">
-
-  <img src="assets/imgs/work/galler/industry/obras2.jpg" alt="" class="img-fluid">
-
-  <img src="assets/imgs/work/galler/industry/obras3.jpg" alt="" class="img-fluid">
-
-  <img src="assets/imgs/work/galler/industry/obras4.jpg" alt="" class="img-fluid">
-
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/mant.jpg" alt="" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/mant1.jpg" alt="" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/obras.jpg" alt="" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/obras1.jpg" alt="" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/obras2.jpg" alt="" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/obras3.jpg" alt="" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/industry/obras4.jpg" alt="" class="d-block w-100">
+      </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 
