--- a/src/app/houseing/houseing.component.css
+++ b/src/app/houseing/houseing.component.css
@@ -5,4 +5,12 @@ margin-bottom: 1.5rem;
 .container-text-center .card-title {
   padding: 1.1rem 0;
 }
-
+body {
+  text-align: left;
+}
+#ctanow {
+  margin: 1rem 0;
+}
+.col-md-4 {
+  text-align: left;
+}
