--- a/src/app/houseing/houseing.component.html
+++ b/src/app/houseing/houseing.component.html
@@ -1,53 +1,55 @@
-<div class="container-text-center">
+<div class="card mb-3" style="max-width: 1240px;">
 
 
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/imgs/work-galler/house/house-tablero.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/prepint.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/prepint2.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/prepint3.jpg" alt="" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/housef.jpg" alt="" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/housef1.jpg" alt="" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/housef2.jpg" alt="" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/housef3.jpg" alt="" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/bath1.jpg" alt="" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/bath2.jpg" alt="" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/house/bath3.jpg" alt="" class="d-block w-100">
+  <div class="row g-0">
+  <div class="col-md-6">
+  <img src="assets/imgs/old-house.png" class="img-fluid rounded-start" alt="...">
+  </div>
 
+  <div class="col-md-4">
+    <div class="card-body">
+      <h5 class="card-title">Instalaciones domiciliarias y mantenimiento electrico</h5>
+      <p class="card-text">El mantenimiento regular de las instalaciones eléctricas es esencial para garantizar la seguridad, la eficiencia y la confiabilidad a largo plazo del sistema eléctrico, además de cumplir con las normativas y evitar costosos problemas y reparaciones.</p>
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Ahorro a largo plazo
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Identificar y corregir problemas antes de que se agraven evita reparaciones costosas y reduce el riesgo de tener que reemplazar equipos eléctricos dañados. Además, un sistema eléctrico eficiente consume menos energía, lo que se traduce en ahorros en las facturas de electricidad.</div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Seguridad
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">La seguridad es la razón más importante para llevar a cabo el mantenimiento eléctrico. Las instalaciones eléctricas deterioradas o mal mantenidas pueden representar un riesgo significativo de incendios, descargas eléctricas y otros accidentes graves.</div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Fiabilidad y Eficiencia
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Un mantenimiento adecuado contribuye a la fiabilidad y eficiencia de las instalaciones eléctricas. Las conexiones sueltas, el desgaste de los componentes y otros problemas comunes pueden afectar el rendimiento de los equipos y dispositivos eléctricos.</div>
+        </div>
+      </div>
+      <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+
 </div>
-<h5 class="card-title">Mas de 20 años de experiencia</h5>
-<p class="card-text">Nuestro principal objetivo es siempre brindar un servicio eficaz a nuestros clientes</p>
-<a href="#" class="btn btn-primary">Go somewhere</a>
+
+
 </div>
+  </div>
+  </div>
+</div>
+
+
+
