--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,54 +1,127 @@
-<div class="container text-center">
-  <div class="row">
-    <div class="col">
-   <img src="assets/imgs/work-galler/house/bath3.jpg" alt="" class="img-fluid">
-    </div>
-    <div class="col">
-      <img src="assets/imgs/work-galler/poolclima/poolclima2.jpg" alt="" class="img-fluid">
+<div class="container-text-center">
+
+
+  <div id="carouselHouse" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <div class="carousel-item active">
+        <img src="assets/imgs/work-galler/house/bath1.jpg" alt="" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/house/bath2.jpg" alt="" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/imgs/work-galler/house/bath3.jpg" alt="" class="d-block w-100">
 
       </div>
-    <div class="col">
-
-      <img src="assets/imgs/work-galler/poolclima/climatice.jpg" alt="" class="img-fluid">
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselHouse" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselHouse" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <h5 class="card-title">Trabajo realizado en residencia, en coordinacion con constructor sanitario</h5>
+  <p class="card-text">Instalacion de artefactos led y espejo retroiluminado, instalacion de tomacorrientes y conexiones auxiliares</p>
+  <a href="#" class="btn btn-primary">Cotizar</a>
+  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <img src=".." class="rounded me-2 img-thumbnail" alt="...">
+      <strong class="me-auto">Belen</strong>
+    </div>
+    <div class="toast-body">
+      Quedamos muy conformes con el trabajo de Hugo, de Salto Instalaciones. Lo hicieron rapido, muy prolijo y atento a nuestras consultas.
+      Super recomendable.
     </div>
   </div>
-
-    <div class="row">
-      <div class="col">
-        <img src="assets/imgs/work-galler/house/lightout2.jpg" alt="" class="img-fluid">
-
-      </div>
-      <div class="col">
-        <img src="assets/imgs/work-galler/house/housef.jpg" alt="" class="img-fluid">
-
-      </div>
-      <div class="col">
-        <img src="assets/imgs/work-galler/house/housef2.jpg" alt="" class="img-fluid">
-
-      </div>
-      <div class="col">
-        <img src="assets/imgs/work-galler/house/housef1.jpg" alt="" class="img-fluid">
-
-      </div>
-    </div>
-
-
-  <div class="row">
-    <div class="col">
-      <img src="assets/imgs/work-galler/panels/panelsolar1.jpg" alt="" class="img-fluid">
-    </div>
-    <div class="col">
-      <img src="assets/imgs/work-galler/panels/panelsolar2.jpg" alt="" class="img-fluid">
-    </div>
-    <div class="col">
-      <img src="assets/imgs/work-galler/panels/solarinstall1.jpg" alt="" class="img-fluid">
-    </div>
   </div>
-  <p class="lead">
-    Los principios fundamentales de nuestra Empresa se basan en la filosofia; brindar un servicio de calidad a nuestros clientes.
-    Mas de 20 años de experiencia nos avalan, tu siguiente proyecto es con nosotros
-  </p>
-  <div class="d-grid col-6 mx-auto">
-    <button class="btn btn-outline-primary" type="button">Button</button>
-  </div>
-</div>
+  <div class="container-text-center">
+
+
+    <div id="carouselClimate" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+
+        <div class="carousel-item active">
+          <img src="assets/imgs/work-galler/poolclima/poolclima.jpg" alt="" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/imgs/work-galler/poolclima/poolclima1.jpg" alt="" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/imgs/work-galler/poolclima/poolclima2.jpg" alt="" class="d-block w-100">
+
+        </div>
+        <div class="carousel-item">
+          <img src="assets/imgs/work-galler/poolclima/poolclima3.jpg" alt="" class="d-block w-100">
+
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselClimate" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselClimate" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <h5 class="card-title">Trabajo realizado en vivienda</h5>
+    <p class="card-text">Instalacion de sistema de climatizacion de piscina en integracion con colectores solares</p>
+    <a href="#" class="btn btn-primary">Cotizar</a>
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <img src=".." class="rounded me-2 img-thumbnail" alt="...">
+        <strong class="me-auto">Martin</strong>
+      </div>
+      <div class="toast-body">
+        Super rapida la instalacion, muy conforme con mi nueva piscina, la facilidad de uso del sistema de control de temperatura me permite adaptarla a mis preferencias.
+        Recomiendo!
+      </div>
+    </div>
+    </div>
+    <div class="container-text-center">
+
+
+      <div id="carouselPanels" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+
+          <div class="carousel-item active">
+            <img src="assets/imgs/work-galler/panels/panelsolar.jpg" alt="" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/imgs/work-galler/panels/panelsolar1.jpg" alt="" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/imgs/work-galler/panels/controlpanel.jpg" alt="" class="d-block w-100">
+
+          </div>
+          <div class="carousel-item">
+            <img src="assets/imgs/work-galler/panels/solarenergy.jpg" alt="" class="d-block w-100">
+
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselPanels" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselPanels" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <h5 class="card-title">Paneles solares para sistema off-grid</h5>
+      <p class="card-text">Instalacion de paneles solares para auto abastecimiento de estancia</p>
+      <a href="#" class="btn btn-primary">Cotizar</a>
+      <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <img src=".." class="rounded me-2 img-thumbnail" alt="...">
+          <strong class="me-auto">Jorge</strong>
+        </div>
+        <div class="toast-body">
+          Muy profesional, cumplio con nuestras expectativas dado que necesitabamos realizar esta inversion y nos asesoro de principio a fin
+        </div>
+      </div>
+      </div>
