added serv sect

--- a/src/app/climate/climate.component.html
+++ b/src/app/climate/climate.component.html
@@ -1,63 +1,64 @@
 
-<div id="carouselExampleCaptions" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+<div class="card mb-3" style="max-width: 1240px;">
+  <div class="row g-0">
+    <div class="col-md-6">
+    <img src="assets/imgs/climatepool.png" class="img-fluid rounded-start" id="firstone" alt="...">
+    </div>
+
+    <div class="col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Climatizacion de piscinas</h5>
+        <p class="card-text">Para aquellos que desean maximizar el disfrute de su piscina durante todo el año.</p>
+
+        <div class="accordion accordion-flush" id="accordionHouse">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Eficiencia y Ahorro de Costos
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+              <div class="accordion-body">Los modernos climatizadores para piscinas son eficientes,utilizando tecnologías como
+                bombas de calor o intercambiadores de calor. Estos sistemas pueden extraer calor del aire
+                  ambiente o de fuentes naturales, como el sol, para calentar el agua de la piscina. Al mejorar la eficiencia energética,
+                  se experimenta un ahorro significativo en los costos a largo plazo en comparación con métodos tradicionales de calentamiento de piscinas.
+              </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                Control Preciso de la Temperatura del Agua
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+              <div class="accordion-body">Un climatizador te brinda la capacidad de controlar con precisión la temperatura del agua de tu piscina.
+                 Ajustar facilmente la temperatura a niveles cómodos durante diferentes estaciones del año.
+                  Este control preciso contribuye significativamente al confort y mejora la experiencia de la piscina.
+              </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                Disfruta tu piscina todo el año
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+              <div class="accordion-body">
+                La adición de un climatizador permite el uso de la piscina durante todo el año,
+                independientemente de las condiciones climáticas locales. Con la capacidad de mantener
+                una temperatura agradable incluso en meses más fríos, podes disfrutar de la piscina en
+                cualquier momento, lo que aumenta el valor y la utilidad de tu inversión en la piscina.
+              </div>
+          </div>
+        </div>
+        <button type="button" id="ctanow" class="btn btn-outline-primary">Solicitar presupuesto</button>
+      </div>
+      </div>
+
+      </div>
+
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/imgs/work-galler/poolclima/climatice.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
     </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/poolclima/climatice2.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
     </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/poolclima/poolclima.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/poolclima/poolclima1.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/poolclima/poolclima2.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/imgs/work-galler/poolclima/poolclima3.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
+
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
