--- a/src/app/industry/industry.component.html
+++ b/src/app/industry/industry.component.html
@@ -1,52 +1,64 @@
-
-
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/imgs/work-galler/industry/sillaeleva.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/sillaele1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/sillaele2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/sillaele4.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/sillaele5.jpg" class="d-block w-100" alt="...">
-      </div>
-
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/mant.jpg" alt="" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/mant1.jpg" alt="" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/obras.jpg" alt="" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/obras1.jpg" alt="" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/obras2.jpg" alt="" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/obras3.jpg" alt="" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/industry/obras4.jpg" alt="" class="d-block w-100">
-      </div>
+<div class="card mb-3" style="max-width: 1240px;">
+<div class="row g-0">
+  <div class="col-md-6">
+  <img src="assets/imgs/bigtablero.png" class="img-fluid rounded-start" id="firstone" alt="...">
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 
+  <div class="col-md-4">
+    <div class="card-body">
+      <h5 class="card-title">Mantenimiento Industrial</h5>
+
+      <p class="card-text">El mantenimiento y las revisiones regulares de instalaciones eléctricas industriales son esenciales para garantizar la seguridad, la eficiencia y la conformidad con regulaciones, contribuyendo así a un entorno de trabajo más seguro y a la continuidad de las operaciones industriales.</p>
+      <div class="accordion accordion-flush" id="accordionHouse">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Prevención de Accidentes y Riesgos de Seguridad
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+            <div class="accordion-body">El mantenimiento regular ayuda a identificar y corregir posibles problemas antes de que
+              se conviertan en riesgos para la seguridad.
+               La detección temprana de desgastes, conexiones sueltas o equipos defectuosos
+               puede prevenir situaciones peligrosas y proteger a los trabajadores y la propiedad.
+            </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Optimización del Rendimiento y Eficiencia Energética
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+            <div class="accordion-body">Las revisiones periódicas permiten ajustar y optimizar los componentes de la instalación eléctrica para
+              garantizar un rendimiento eficiente. Esto incluye la calibración de equipos, la identificación de puntos de congestión en el
+              sistema y la corrección de problemas que podrían afectar la eficiencia energética.
+              Un sistema eléctrico eficiente reduce los costos operativos y contribuye a la sostenibilidad al minimizar el desperdicio de energía.
+            </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Cumplimiento Normativo y Fiabilidad Continua
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+            <div class="accordion-body">
+              Realizar revisiones y mantenimiento asegura que la instalación cumpla con los estándares establecidos.
+              Además, la fiabilidad continua de la instalación es esencial para evitar interrupciones en la producción
+              y garantizar la continuidad operativa. Un mantenimiento planificado reduce la probabilidad de fallas inesperadas que podrían
+              resultar costosas en términos de tiempo de inactividad y pérdida de producción
+            </div>
+        </div>
+      </div>
+      <button type="button" id="ctanow" class="btn btn-outline-primary">Solicitar presupuesto</button>
+    </div>
+    </div>
+
+    </div>
+
+</div>
+  </div>
+  </div>
+
+</div>
