--- a/src/app/installations/installations.component.html
+++ b/src/app/installations/installations.component.html
@@ -1,31 +1,66 @@
 
 
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/imgs/work-galler/cctv/cctv.jpg" class="d-block w-100" alt="...">
+<div class="card mb-3" style="max-width: 1240px;">
+  <div class="row g-0">
+    <div class="col-md-6">
+    <img src="assets/imgs/cctvcamera.png" class="img-fluid rounded-start" id="firstone" alt="...">
+    </div>
+
+    <div class="col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Sistemas de Videovigilancia</h5>
+        <h5 class="card-text">Por que contratar un sistema de videovigilancia?</h5>
+        <p class="card-text">Asegura tu establecimiento o vivienda con nuestras instalaciones de videovigilancia en el dia</p>
+        <div class="accordion accordion-flush" id="accordionHouse">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Protección de Propiedad y Recursos
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+              <div class="accordion-body">Facilitan la gestión de accesos, permitiendo a los propietarios
+                controlar y registrar quién tiene acceso a ciertas áreas. Esto es especialmente beneficioso en entornos comerciales o
+                 industriales donde la gestión de la seguridad es crucial
+                para proteger activos y garantizar un funcionamiento sin problemas.
+              </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                Prevención y Disuasión de Delitos
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+              <div class="accordion-body">La presencia visible de cámaras de seguridad actúa como un elemento disuasorio para
+                posibles delincuentes. Saber que están siendo vigilados puede disuadir a individuos malintencionados de cometer
+                 actos delictivos. En caso de que ocurra un incidente, las cámaras proporcionan evidencia valiosa que puede
+                 ayudar en la identificación y persecución de los responsables
+              </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                Monitoreo y Supervisión en Tiempo Real
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+              <div class="accordion-body">
+                Las cámaras de seguridad permiten el monitoreo en tiempo real de áreas específicas.
+                Esto es especialmente útil en entornos comerciales, industriales o residenciales, ya que proporciona a los propietarios
+                o administradores la capacidad de supervisar las actividades y
+                 responder de manera inmediata a situaciones de emergencia o comportamientos sospechosos.
+              </div>
+          </div>
+        </div>
+        <button type="button" id="ctanow" class="btn btn-outline-primary">Solicitar presupuesto</button>
       </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/cctv/cctv1.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/cctv/ccinstall.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/cctv/ccinstall1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/cctv/ccinstall2.jpg" class="d-block w-100" alt="...">
+
       </div>
 
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+    </div>
+    </div>
 
+  </div>
