--- a/src/app/panels/panels.component.html
+++ b/src/app/panels/panels.component.html
@@ -1,63 +1,63 @@
+<div class="card mb-3" style="max-width: 1240px;">
+  <div class="row g-0">
+    <div class="col-md-6">
+    <img src="assets/imgs/1.png" class="img-fluid rounded-start" id="firstone" alt="...">
+    </div>
 
-  <div id="carouselExampleCaptions" class="carousel slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+    <div class="col-md-4">
+      <div class="card-body">
+        <h5 class="card-title">Instalacion de paneles solares</h5>
+        <p class="card-text">Por que no aprovechar la energia del sol para reducir tus costos energeticos?</p>
+        <h5 class="card-text">Hace la eleccion inteligente, elegi la energia solar!</h5>
+        <div class="accordion accordion-flush" id="accordionHouse">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ahorro significativo a largo plazo
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+              <div class="accordion-body">Los paneles solares permiten generar tu propia electricidad a partir de
+                 la energía solar, reduciendo así tu dependencia de la red eléctrica tradicional. Aunque la inversión
+                 inicial puede ser significativa, a largo plazo, los propietarios experimentan un ahorro sustancial
+                 en sus facturas de electricidad, retornando rapidamente la inversión inicial.
+              </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                Aumento del Valor de la Propiedad
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+              <div class="accordion-body">La instalación de paneles solares puede aumentar significativamente el valor de una propiedad.
+                Los compradores de viviendas y propiedades comerciales están cada vez más interesados en soluciones de energía renovable,
+                y la presencia de un sistema solar es un factor diferenciador positivo. Además, estudios sugieren que las propiedades con
+                 paneles solares tienden a venderse más rápido en el mercado inmobiliario.
+              </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                Responsabilidad Corporativa y Reputación
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
+              <div class="accordion-body">
+                Para las empresas, la adopción de la energía solar puede mejorar la imagen de la marca al demostrar
+                un compromiso con la sostenibilidad y la responsabilidad ambiental.
+                Muchos consumidores valoran a las empresas que toman medidas para reducir su impacto ambiental.
+              </div>
+          </div>
+        </div>
+        <button type="button" id="ctanow" class="btn btn-outline-primary">Solicitar presupuesto</button>
+      </div>
+      </div>
+
+      </div>
+
+  </div>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/imgs/work-galler/panels/panelsolar.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/panels/panelsolar1.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/panels/panelsolar2.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/panels/panelen.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/panels/panelen1.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/imgs/work-galler/panels/panelen2.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+
   </div>
