--- a/src/app/works/works.component.css
+++ b/src/app/works/works.component.css
@@ -16,3 +16,13 @@
   padding: .4rem 0;
   margin: .3rem auto;
 }
+.d-block {
+  max-height: 650px;
+  max-width: 80%;
+  margin: auto;
+}
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  color: #85a2f8;
+  padding: 1rem;
+  background-color: #40548f;
+}
