--- a/src/app/heromain/heromain.component.html
+++ b/src/app/heromain/heromain.component.html
@@ -6,7 +6,7 @@
 
         <div class="row g-0">
         <div class="col-md-6">
-        <img src="assets/imgs/hugohero.png" class="img-fluid rounded-start" alt="...">
+        <img src="assets/imgs/hugohero.png" id="firstimg" class="img-fluid rounded-start" alt="...">
         </div>
 
         <div class="col-md-4">
@@ -28,7 +28,7 @@
 
         <div class="row g-0">
         <div class="col-md-6">
-        <img src="assets/imgs/work-galler/cctv/cctvmain.jpg" class="img-fluid rounded-start" alt="...">
+        <img src="assets/imgs/work-galler/cctv/cctvmain.jpg" id="secondimg" class="img-fluid rounded-start" alt="...">
         </div>
 
         <div class="col-md-4">
