--- a/src/app/houseing/houseing.component.html
+++ b/src/app/houseing/houseing.component.html
@@ -16,51 +16,16 @@
           <div class="card-body">
             <h5 class="card-title">Instalaciones domiciliarias y mantenimiento electrico</h5>
             <p class="card-text">El mantenimiento regular de las instalaciones eléctricas es esencial para garantizar la seguridad, la eficiencia y la confiabilidad a largo plazo del sistema eléctrico, además de cumplir con las normativas y evitar costosos problemas y reparaciones.</p>
-            <div class="accordion accordion-flush" id="accordionHouse">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Ahorro a largo plazo
-                  </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
-                  <div class="accordion-body">Identificar y corregir problemas antes de que se agraven evita reparaciones costosas y reduce el riesgo de tener que reemplazar equipos eléctricos dañados. Además, un sistema eléctrico eficiente consume menos energía, lo que se traduce en ahorros en las facturas de electricidad.
 
-                  </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Seguridad
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
-                  <div class="accordion-body">La seguridad es la razón más importante para llevar a cabo el mantenimiento eléctrico. Las instalaciones eléctricas deterioradas o mal mantenidas pueden representar un riesgo significativo de incendios, descargas eléctricas y otros accidentes graves.
-
-                  </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Fiabilidad y Eficiencia
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionHouse">
-                  <div class="accordion-body">Un mantenimiento adecuado contribuye a la fiabilidad y eficiencia de las instalaciones eléctricas. Las conexiones sueltas, el desgaste de los componentes y otros problemas comunes pueden afectar el rendimiento de los equipos y dispositivos eléctricos.
-
-                  </div>
-              </div>
-            </div>
             <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
-          </div>
-          </div>
 
           </div>
-
+        </div>
+        </div>
       </div>
-        </div>
-        </div>
+
     </div>
+
     <div class="carousel-item">
       <div class="row g-0">
         <div class="col-md-6">
@@ -70,48 +35,15 @@
         <div class="col-md-4">
           <div class="card-body" id="second-card">
             <h5 class="card-title">Instalaciones electricas y asesoria en obras</h5>
-            <p class="card-text">Contratar a un buen electricista es crucial para garantizar el éxito y la seguridad de una obra, ya sea una vivienda o un edificio.</p>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Seguridad
-                  </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Un profesional calificado se asegurará de que la instalación eléctrica cumpla con todas las normativas de seguridad. Esto reduce significativamente el riesgo de cortocircuitos, sobrecargas, incendios y otros peligros eléctricos que podrían poner en peligro la vida de las personas y dañar la propiedad.
-                    </div>
-                  </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Diseño personalizado
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Esto incluye la disposición de los puntos de conexión, la distribución de la carga eléctrica y la integración de tecnologías avanzadas.</div>
-                </div>
-                  <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Eficiencia Energética
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Nuestros electricistas experimentados pueden ayudar a optimizar el diseño y la implementación del sistema eléctrico para mejorar la eficiencia energética. Reduciendo los costos a largo plazo para los propietarios.
-                     </div>
-                 </div>
-                  </div>
+            <p class="card-text">Contratar a un buen electricista es crucial para garantizar el éxito
+              y la seguridad de una obra, ya sea una vivienda o un edificio.</p>
 
             <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
           </div>
         </div>
-          </div>
-        </div>
-        </div>
+      </div>
     </div>
     </div>
-  </div>
 
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -122,8 +54,8 @@
     <span class="visually-hidden">Next</span>
   </button>
 
+</div>
 
-</div>
-</div>
+
 
 
