--- a/src/app/sitefooter/sitefooter.component.html
+++ b/src/app/sitefooter/sitefooter.component.html
@@ -1,52 +1,14 @@
 <div class="container">
-  <div class="row">
 
-
-    <div class="col-sm-6">
-      <div class="row">
-        <div class="col-8 col-sm-6">
-          Servicios
-          <div class="row"><p><a href="#" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Instalaciones</a></p></div>
-          <div class="row"><p><a href="#" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sistemas CCTV</a></p></div>
-          <div class="row"><p><a href="#" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Paneles Solares</a></p></div>
-        </div>
-        <div class="col-8 col-sm-6">
-          Trayectoria
-          <div class="row"><p><a href="#" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Nosotros</a></p>
-          </div>
-          <div class="row"><p><a href="#" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Garantia</a></p></div>
-
-          <div class="row"><p><a href="#" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Asesoria</a></p></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-8 col-sm-6">
-      Contacto
-      <div class="row">
-        <div class="mb-3">
-          <label for="FormControlInput1" class="form-label">Correo electronico</label>
-          <input type="email" class="form-control" id="FormControlInput1" placeholder="nombre@gmail.com">
-        </div>
-        <div class="mb-3">
-          <label for="FormControlTextarea1" class="form-label">Dejanos un mensaje</label>
-          <textarea class="form-control" id="FormControlTextarea1" rows="3"></textarea>
-        </div>
-       <div class="mb-3">
-        <button type="button" class="btn btn-outline-primary btn-lg">Enviar</button>
-       </div>
-      </div>
-    </div>
-  </div>
   <hr>
-<div class="d-flex flex-column flex-sm-row justify-content-around py-4 my-4">
+<div class="d-flex flex-column flex-sm-row justify-content-around py-4 my-4" id="contenedor-foot">
   <h6>SALTO INSTALACIONES &copy; <small>2023</small></h6>
   <small>Horario de atencion: Lunes a Viernes 8:00 - 18:00</small>
     <a href="https://www.google.com/maps/place/Agraciada+3120,+50000+Salto,+Departamento+de+Salto/@-31.3875946,-57.9366521,17z/data=!3m1!4b1!4m6!3m5!1s0x95addcb9e2b822b1:0x36b736e99a48ade0!8m2!3d-31.3875946!4d-57.9340772!16s%2Fg%2F11fp3ksbrx?entry=ttu" class="link-dark"><small>Salto, Uruguay</small>
       <i class="fa-solid fa-location-dot" style="color: #4400ff;"></i>
     </a>
 
-  <ul class="list-unstyled d-flex justify-content-end col-md-4">
+  <ul class="list-unstyled d-flex justify-content-around col-md-4">
     <li class="ms-3">
       <a href="https://www.instagram.com/saltoinstalaciones/" class="link-dark">
         <i class="fa fa-brands fa-instagram" style="color: #a64e9b;"></i>
@@ -58,7 +20,7 @@
       </a>
     </li>
     <li class="ms-3">
-      <a href="#" class="icon-link animated-icon" target="_blank">
+      <a href="tel://+59898414718" class="icon-link animated-icon" target="_blank">
         <fa-icon [icon]="['fas','phone-volume']"></fa-icon>
     </a>
     </li>
