--- a/src/app/houseing/houseing.component.css
+++ b/src/app/houseing/houseing.component.css
@@ -26,7 +26,8 @@ body {
   background-color: #40548f;
 }
 #firstone {
-  max-height: 600px;
+  width: 70%;
+  max-height: 400px;
 }
 .card-title {
   font-size: 2.1rem;
