--- a/src/app/mainsec/mainsection/mainsection.component.html
+++ b/src/app/mainsec/mainsection/mainsection.component.html
@@ -12,7 +12,15 @@
             <h5 class="card-title">Confia tus necesidades electricas a manos expertas!</h5>
             <p class="card-text">En nuestro equipo contamos con electricistas altamente calificados y listos para atender tus demandas en la comodidad de tu hogar.</p>
             <p class="card-text"><small class="text-body-secondary">Por que elegir nuestros servicios electricos?</small></p>
-            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
+            <button type="button" id="ctanow" class="btn btn-outline-primary">Coordina hoy una visita
+               <a href="tel://+59898414718">
+                <span class="material-symbols-outlined">
+            phone_callback
+                </span>
+                </a>
+
+            </button>
+            <small>Horario de atencion: Lunes a Viernes 8:00 a 18:00</small>
           </div>
         </div>
       </div>
@@ -27,7 +35,15 @@
             <h5 class="card-title">Domicilio o Comercio</h5>
             <p class="card-text">Desde la solucion de problemas simples hasta proyectos mas grandes, estamos aqui para ayudarte con todas tus necesidades electricas. No dejes que los problemas electricos te preocupen, contactanos ahora y deja que nuestros expertos se encarguen de todo.</p>
             <p class="card-text"><small class="text-body-secondary">Tu tranquilidad electrica comienza con nosotros</small></p>
-            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
+            <button type="button" id="ctanow" class="btn btn-outline-primary">Agenda hoy tu consulta
+              <a href="tel://+59898414718">
+                <span class="material-symbols-outlined">
+              phone_callback
+                </span>
+              </a>
+
+            </button>
+            <small>Horario de atencion: Lunes a Viernes 8:00 a 18:00</small>
           </div>
         </div>
       </div>
